--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 @import "./section/common";
-@import ".//section/variable";
+@import "./section/variable";
 @import "./section/banner-alt";
 @import "./section/about";
 @import "./section/faq";
